Adding user differentiation

--- a/frontend/book-details.html
+++ b/frontend/book-details.html
@@ -14,16 +14,13 @@
         <a href="index.html"><img src="assets/images/logo.png" alt="Reader's Heaven Logo"></a>
       </div>
 
-      <div class="header-right" id="header-right">
-        <a href="cart.html" id="cartLink">🛒 Cart</a>
-        <a href="login.html" id="loginLink">👤 Login</a>
-      </div>
+      <div class="header-right" id="header-right"></div>
     </div>
   </header>
 
   <main class="book-details-container">
     <div class="book-details" id="bookDetails">
-      <!-- Book info will be dynamically inserted here -->
+      <!-- Book info will be dynamically inserted here via book-details.js -->
     </div>
   </main>
 
