--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,7 @@
   <header class="header">
     <div class="header-container">
       <div class="logo">
-        <a href="index.html">
-          <img src="assets/images/logo.png" alt="Reader's Heaven Logo">
-        </a>
+        <a href="index.html"><img src="assets/images/logo.png" alt="Reader's Heaven Logo"></a>
       </div>
 
       <div class="search-bar">
@@ -22,7 +20,8 @@
       </div>
 
       <div class="header-right" id="header-right">
-        <a href="cart.html" id="cartLink">🛒 Cart</a>
+        <a href="wishlist.html" id="wishlistLink">❤️ Wishlist (<span id="wishlistCount">0</span>)</a>
+        <a href="cart.html" id="cartLink">🛒 Cart (<span id="cartCount">0</span>)</a>
         <a href="login.html" id="loginLink">👤 Login</a>
       </div>
     </div>
