--- a/frontend/books.html
+++ b/frontend/books.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header class="header">
     <div class="header-container">
       <div class="logo">
@@ -15,13 +16,10 @@
 
       <div class="search-bar">
         <input type="text" id="searchInput" placeholder="Search books, authors, categories...">
-        <button onclick="searchBooks()">🔍</button>
+        <button id="searchBtn">🔍</button>
       </div>
 
-      <div class="header-right" id="header-right">
-        <a href="cart.html">🛒 Cart</a>
-        <a href="login.html">👤 Login</a>
-      </div>
+      <div class="header-right" id="header-right"></div>
     </div>
   </header>
 
