--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,21 +7,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header class="header">
     <div class="header-container">
       <div class="logo">
         <a href="index.html"><img src="assets/images/logo.png" alt="Reader's Heaven Logo"></a>
       </div>
-
-      <div class="search-bar">
-        <input type="text" placeholder="Search books, authors, categories...">
-        <button>🔍</button>
-      </div>
-
-      <div class="header-right" id="header-right">
-        <a href="cart.html">🛒 Cart</a>
-        <a href="login.html">👤 Login</a>
-      </div>
+      <div class="header-right" id="header-right"></div>
     </div>
   </header>
 
@@ -33,15 +25,12 @@
           <label for="email">Email <span class="required">*</span></label>
           <input type="email" id="email" placeholder="Enter your email" required>
         </div>
-
         <div class="form-group">
           <label for="password">Password <span class="required">*</span></label>
           <input type="password" id="password" placeholder="Enter your password" required>
         </div>
-
         <button type="submit" class="btn-login">Login</button>
       </form>
-
       <p class="register-text">
         Don’t have an account? <a href="register.html" class="create-link">Create one</a>
       </p>
@@ -52,28 +41,39 @@
   <script>
     document.querySelector("#loginForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-
       const creds = {
         email: document.querySelector("#email").value,
         password: document.querySelector("#password").value
       };
-
       try {
         const res = await fetch("http://localhost:8080/api/auth/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(creds)
         });
-
         if (res.ok) {
           const user = await res.json();
+          /*
+          Ensure your backend sends the role property:
+          user.role -> "customer" or "admin"
+          */
           localStorage.setItem("user", JSON.stringify(user));
+
           alert("Login successful!");
-          window.location.href = "index.html";
+
+          if (user.role === "admin") {
+            // Redirect admin to admin dashboard
+            window.location.href = "admin-dashboard.html";
+          } else {
+            // Redirect customer to homepage
+            window.location.href = "index.html";
+          }
+
         } else {
           const msg = await res.text();
           alert("Login failed: " + msg);
         }
+
       } catch (err) {
         alert("Server error. Try again later.");
         console.error(err);
