--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -7,16 +7,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header class="header">
     <div class="header-container">
       <div class="logo">
         <a href="index.html"><img src="assets/images/logo.png" alt="Reader's Heaven Logo"></a>
       </div>
-
-      <div class="header-right" id="header-right">
-        <a href="cart.html">🛒 Cart</a>
-        <a href="login.html">👤 Login</a>
-      </div>
+      <div class="header-right" id="header-right"></div>
     </div>
   </header>
 
@@ -79,8 +76,6 @@
       }
 
       grandTotalEl.textContent = grandTotal.toFixed(2);
-
-      // Clear cart after "placing order"
       localStorage.removeItem("cart");
     }
 
