--- a/frontend/register.html
+++ b/frontend/register.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 
+  <!-- Header -->
   <header class="header">
     <div class="header-container">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.png" alt="Reader's Heaven Logo"></a>
+        <a href="index.html">
+          <img src="assets/images/logo.png" alt="Reader's Heaven Logo">
+        </a>
       </div>
       <div class="header-right" id="header-right"></div>
     </div>
   </header>
 
+  <!-- Main Registration Section -->
   <main class="auth-container">
     <div class="auth-box">
       <h2>Create an Account</h2>
@@ -25,57 +29,36 @@
           <label for="fullname">Full Name <span class="required">*</span></label>
           <input type="text" id="fullname" placeholder="Enter your full name" required>
         </div>
+
         <div class="input-group">
           <label for="email">Email <span class="required">*</span></label>
           <input type="email" id="email" placeholder="Enter your email" required>
         </div>
+
         <div class="input-group">
           <label for="password">Password <span class="required">*</span></label>
           <input type="password" id="password" placeholder="Enter your password" required>
         </div>
+
         <div class="input-group">
           <label for="address">Address <span class="required">*</span></label>
           <textarea id="address" placeholder="Enter your address" rows="3" required></textarea>
         </div>
+
         <div class="input-group">
           <label for="contact">Contact Number <span class="required">*</span></label>
           <input type="tel" id="contact" placeholder="Enter your contact number" required>
         </div>
+
         <button type="submit" class="btn">Register</button>
         <p class="redirect-text">Already have an account? <a href="login.html">Login here</a></p>
       </form>
     </div>
   </main>
 
+  <!-- Scripts -->
   <script src="js/header.js"></script>
-  <script>
-    document.querySelector("#registerForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const data = {
-        full_name: document.querySelector("#fullname").value,
-        email: document.querySelector("#email").value,
-        password: document.querySelector("#password").value,
-        address: document.querySelector("#address").value,
-        contact_number: document.querySelector("#contact").value
-      };
-      try {
-        const res = await fetch("http://localhost:8080/api/auth/register", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
-        });
-        if (res.ok) {
-          alert("Registration successful! Redirecting to login...");
-          window.location.href = "login.html";
-        } else {
-          const msg = await res.text();
-          alert("Registration failed: " + msg);
-        }
-      } catch (err) {
-        alert("Server error. Please try again.");
-        console.error(err);
-      }
-    });
-  </script>
+  <script src="js/api.js"></script>
+  <script src="js/register.js"></script>
 </body>
 </html>
