--- a/frontend/login.html
+++ b/frontend/login.html
@@ -37,48 +37,8 @@
     </div>
   </main>
 
+  <!-- JS files -->
   <script src="js/header.js"></script>
-  <script>
-    document.querySelector("#loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const creds = {
-        email: document.querySelector("#email").value,
-        password: document.querySelector("#password").value
-      };
-      try {
-        const res = await fetch("http://localhost:8080/api/auth/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(creds)
-        });
-        if (res.ok) {
-          const user = await res.json();
-          /*
-          Ensure your backend sends the role property:
-          user.role -> "customer" or "admin"
-          */
-          localStorage.setItem("user", JSON.stringify(user));
-
-          alert("Login successful!");
-
-          if (user.role === "admin") {
-            // Redirect admin to admin dashboard
-            window.location.href = "admin-dashboard.html";
-          } else {
-            // Redirect customer to homepage
-            window.location.href = "index.html";
-          }
-
-        } else {
-          const msg = await res.text();
-          alert("Login failed: " + msg);
-        }
-
-      } catch (err) {
-        alert("Server error. Try again later.");
-        console.error(err);
-      }
-    });
-  </script>
+  <script src="js/login.js"></script> <!-- ✅ moved logic here -->
 </body>
 </html>
