--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,62 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register | Reader's Heaven</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-  <!-- Header -->
   <header class="header">
     <div class="header-container">
       <div class="logo">
-        <a href="index.html">
-          <img src="assets/images/logo.png" alt="Reader's Heaven Logo">
-        </a>
+        <a href="index.html"><img src="assets/images/logo.png" alt="Reader's Heaven Logo"></a>
       </div>
       <div class="header-right" id="header-right"></div>
     </div>
   </header>
 
-  <!-- Main Registration Section -->
   <main class="auth-container">
     <div class="auth-box">
       <h2>Create an Account</h2>
       <form id="registerForm">
         <div class="input-group">
           <label for="fullname">Full Name <span class="required">*</span></label>
-          <input type="text" id="fullname" placeholder="Enter your full name" required>
+          <input type="text" id="fullname" placeholder="Enter your full name" required />
         </div>
-
         <div class="input-group">
           <label for="email">Email <span class="required">*</span></label>
-          <input type="email" id="email" placeholder="Enter your email" required>
+          <input type="email" id="email" placeholder="Enter your email" required />
         </div>
-
         <div class="input-group">
           <label for="password">Password <span class="required">*</span></label>
-          <input type="password" id="password" placeholder="Enter your password" required>
+          <input type="password" id="password" placeholder="Enter your password" required />
         </div>
-
         <div class="input-group">
-          <label for="address">Address <span class="required">*</span></label>
-          <textarea id="address" placeholder="Enter your address" rows="3" required></textarea>
+          <label for="address">Address</label>
+          <textarea id="address" placeholder="Enter your address" rows="3"></textarea>
         </div>
-
         <div class="input-group">
-          <label for="contact">Contact Number <span class="required">*</span></label>
-          <input type="tel" id="contact" placeholder="Enter your contact number" required>
+          <label for="contact">Contact Number</label>
+          <input type="tel" id="contact" placeholder="Enter your contact number" />
         </div>
-
         <button type="submit" class="btn">Register</button>
         <p class="redirect-text">Already have an account? <a href="login.html">Login here</a></p>
       </form>
     </div>
   </main>
 
-  <!-- Scripts -->
+  <!-- scripts: header.js (existing), api helper, register behavior -->
   <script src="js/header.js"></script>
   <script src="js/api.js"></script>
   <script src="js/register.js"></script>
